fix: meta url replaced

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">                                                                
     <head>                                                                      
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0;url=https://%TO_URL%" />      
+        <meta http-equiv="refresh" content="0;url=https://www.notion.so/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed" />
         <link rel="canonical" href="https://www.notion.so/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed" />      
         
         <title>Redirecting to Make-a-Ton 7.0 - Hacker Guide</title>
