--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">                                                                
     <head>                                                                      
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0;url=https://www.notion.so/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed" />
-        <link rel="canonical" href="https://www.notion.so/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed" />      
+        <meta http-equiv="refresh" content="0;url=https://puzzle-sting-6a5.notion.site/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed" />
+        <link rel="canonical" href="https://puzzle-sting-6a5.notion.site/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed" />      
         
         <title>Redirecting to Make-a-Ton 7.0 - Hacker Guide</title>
     </head>                                                                                                                                                                  
     <body>                                                                      
         <h2>                                                                    
-            Redirecting to <a href="https://www.notion.so/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed">Make-a-Ton 7.0 - Hacker Guide</a>
+            Redirecting to <a href="https://puzzle-sting-6a5.notion.site/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed">Make-a-Ton 7.0 - Hacker Guide</a>
         </h2>
         <script>
-            setTimeout(() => window.location.href = "https://www.notion.so/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed", 2000);
+            setTimeout(() => window.location.href = "https://puzzle-sting-6a5.notion.site/Hackers-Guide-Make-A-Ton-7-0-11adb641385080c6a461ebe4f1c8a3ed", 2000);
         </script>
     </body>                                                                    
 </html>
